--- a/09-project/react-app/src/index.css
+++ b/09-project/react-app/src/index.css
@@ -1,3 +1,8 @@
+* {
+  font-family: "Crimson Text", Tahoma, serif;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,59 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+body {
+  text-align: center;
+  padding: 10px;
+}
+
+h1 {
+  font-size: 25px;
+  
+}
+
+h2 {
+  font-size: 20px;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active,
+#Instructor {
+  text-decoration: none;
+}
+
+
+.Instructor,
+.Instructor > span {
+  font-family: "Lato", Tahoma, serif;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  text-decoration: none;
+
+}
+
+.Instructor > span {
+  color: red;
+}
+
+
+body {
+  text-align: center;
+}
+
+div ul,
+div li,
+div p,
+div a {
+  font-size: 20px;
+}
+
+p,
+blockquote {
+  text-align: left;
+  font-size: 20px;
 }
