--- a/09-project/react-app/src/index.css
+++ b/09-project/react-app/src/index.css
@@ -5,31 +5,21 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
 
 body {
   text-align: center;
   padding: 10px;
-}
-
-h1 {
-  font-size: 25px;
-  
-}
-
-h2 {
-  font-size: 20px;
 }
 
 a:link,
@@ -40,30 +30,20 @@ a:active,
   text-decoration: none;
 }
 
-
 .Instructor,
 .Instructor > span {
   font-family: "Lato", Tahoma, serif;
   text-transform: uppercase;
   letter-spacing: -1px;
   text-decoration: none;
-
 }
 
 .Instructor > span {
   color: red;
 }
 
-
 body {
   text-align: center;
-}
-
-div ul,
-div li,
-div p,
-div a {
-  font-size: 20px;
 }
 
 p,
